--- a/index.html
+++ b/index.html
@@ -65,17 +65,13 @@
          <label class="form-check-label" for="6">6</label> 
         </div> 
        </div> 
-       <div class="form-row form-group">
-        <label for="nonsmoking" class="col-12 col-md-2 col-form-label">Section</label>
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <label class="btn btn-success active">
-            <input type="radio" name="smokingopt" id="nonsmoking" autocomplete="off" checked> Non Smoking
-          </label>
-          <label class="btn btn-danger">
-            <input type="radio" name="smokingopt" id="smoking" autocomplete="off"> Smoking
-          </label>
-        </div>
-       </div>
+       <div class="form-row form-group"> 
+        <label for="nonsmoking" class="col-12 col-md-2 col-form-label">Section</label> 
+        <div class="btn-group btn-group-toggle" data-toggle="buttons"> 
+         <label class="btn btn-success active"> <input type="radio" name="smokingopt" id="nonsmoking" autocomplete="off" checked="" /> Non Smoking </label> 
+         <label class="btn btn-danger"> <input type="radio" name="smokingopt" id="smoking" autocomplete="off" /> Smoking </label> 
+        </div> 
+       </div> 
        <div class="form-row form-group"> 
         <label for="time" class="col-12 col-md-2 col-form-label">Date and Time</label> 
         <div class="col-12 col-md-5"> 
@@ -182,6 +178,10 @@
       </ol> 
       <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> </a> 
       <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> </a> 
+      <div class="btn-group" id="carouselButton"> 
+       <button class="btn btn-danger btn-sm" id="carousel-pause"> <span class="fa fa-pause"></span> </button> 
+       <button class="btn btn-danger btn-sm" id="carousel-play"> <span class="fa fa-play"></span> </button> 
+      </div> 
      </div> 
     </div> 
    </div> 
@@ -223,6 +223,18 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS. --> 
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script> 
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script> 
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>  
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> 
+  <script>
+    $(document).ready(function(){
+        console.log("1");
+        $("#mycarousel").carousel( { interval: 2000 } );
+        $("#carousel-pause").click(function(){
+            $("#mycarousel").carousel('pause');
+        });
+        $("#carousel-play").click(function(){
+            $("#mycarousel").carousel('cycle');
+        });
+    });
+</script>  
  </body>
 </html>
