--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li> 
       <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li> 
      </ul> 
-     <span class="navbar-text"> <a data-toggle="modal" data-target="#loginModal"> <span class="fa fa-sign-in"></span> Login</a> </span> 
+     <span class="navbar-text"> <a id="loginBtn"> <span class="fa fa-sign-in"></span> Login</a> </span> 
     </div> 
    </div> 
   </nav> 
@@ -41,7 +41,7 @@
        <div class="form-row form-group"> 
         <label for="numgst" class="col-12 col-md-2 col-form-label">Number of Guests</label> 
         <div class="form-check form-check-inline"> 
-         <input class="form-check-input" type="radio" name="numOptions" /> 
+         <input class="form-check-input" type="radio" name="numOptions" checked/> 
          <label class="form-check-label" for="1">1</label> 
         </div> 
         <div class="form-check form-check-inline"> 
@@ -138,7 +138,7 @@
       <img src="img/logo.png" class="img-fluid" /> 
      </div> 
      <div class="col-12 col-sm-3 align-self-center"> 
-      <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#reserveModal">Reserve Table</a> 
+      <a id="reserveBtn" role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a> 
      </div> 
     </div> 
    </div> 
@@ -237,6 +237,13 @@
             $("#carouselButton").children("span").removeClass('fa-play');
             $("#carouselButton").children("span").addClass('fa-pause');                    
         }
+      }
+      );
+      $("#reserveBtn").click(function(){
+        $("#reserveModal").modal('toggle');
+      });
+      $("#loginBtn").click(function(){
+        $("#loginModal").modal('toggle');
       });
     });
 </script>  
